cluster/infra/elastic-system/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: elastic-system
  labels:
    eck.k8s.elastic.co/operator-name: elastic-operator
